// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Design System|IconButton IconButton Sizes 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    style={
      Object {
        "display": "flex",
        "flexDirection": "row",
        "flexWrap": "wrap",
      }
    }
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <button
        className="css-1yuekrx-Button"
        data-testid="button-button-size-lg"
        disabled={false}
      >
        <span
          className="css-1yy8u54-Button"
        >
          <div
            style={
              Object {
                "marginLeft": "0.5rem",
                "marginRight": "0.5rem",
              }
            }
          >
            <span
              className="css-1gnbc76-Icon"
            >
              <div
                className="css-cz4vnx-Icon"
              />
            </span>
          </div>
        </span>
      </button>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <button
        className="css-d99rbu-Button"
        data-testid="button-button"
        disabled={false}
      >
        <span
          className="css-1yy8u54-Button"
        >
          <div
            style={
              Object {
                "marginLeft": "1rem",
                "marginRight": "0.5rem",
              }
            }
          >
            <span
              className="css-1gnbc76-Icon"
            >
              <div
                className="css-cz4vnx-Icon"
              />
            </span>
          </div>
        </span>
      </button>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <button
        className="css-1kzmtac-Button"
        data-testid="button-button"
        disabled={false}
      >
        <span
          className="css-1yy8u54-Button"
        >
          <div
            style={
              Object {
                "marginLeft": "1rem",
                "marginRight": "0.5rem",
              }
            }
          >
            <span
              className="css-1gnbc76-Icon"
            >
              <div
                className="css-cz4vnx-Icon"
              />
            </span>
          </div>
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System|IconButton IconButton Types 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    style={
      Object {
        "display": "flex",
        "flexDirection": "row",
        "flexWrap": "wrap",
      }
    }
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <button
        className="css-1yuekrx-Button"
        data-testid="button-button-size-lg"
        disabled={false}
      >
        <span
          className="css-1yy8u54-Button"
        >
          <div
            style={
              Object {
                "marginLeft": "0.5rem",
                "marginRight": "0.5rem",
              }
            }
          >
            <span
              className="css-1gnbc76-Icon"
            >
              <div
                className="css-cz4vnx-Icon"
              />
            </span>
          </div>
        </span>
      </button>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <button
        className="css-1rwnuts-Button"
        data-testid="button-button-size-lg"
        disabled={false}
      >
        <span
          className="css-1yy8u54-Button"
        >
          <div
            style={
              Object {
                "marginLeft": "0.5rem",
                "marginRight": "0.5rem",
              }
            }
          >
            <span
              className="css-1gnbc76-Icon"
            >
              <div
                className="css-1atsk5c-Icon"
              />
            </span>
          </div>
        </span>
      </button>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <button
        className="css-1rwnuts-Button"
        data-testid="button-button-size-lg"
        disabled={false}
      >
        <span
          className="css-1yy8u54-Button"
        >
          <div
            style={
              Object {
                "marginLeft": "0.5rem",
                "marginRight": "0.5rem",
              }
            }
          >
            <span
              className="css-1gnbc76-Icon"
            >
              <div
                className="css-tqwzmz-Icon"
              />
            </span>
          </div>
        </span>
      </button>
    </div>
  </div>
</div>
`;
